# binparse-cli

./: .gitignore  Cargo.toml  bad.yaml  png.bfmt  png_debug.bfmt  test_cached.bfmt  test_format.bfmt  test_format.yaml  test_noopt.bfmt  test_opt.bfmt  test_v.yaml  test_v1.bfmt  test_v2.bfmt
src/: lib.rs  main.rs
src/bfmt/: mod.rs
src/checksum/: mod.rs
src/cli/: mod.rs
src/diff/: mod.rs
src/dsl/: mod.rs
src/export/: mod.rs
src/filter/: mod.rs
src/formats/: mod.rs
src/parser/: mod.rs
src/patch/: mod.rs
src/stats/: mod.rs
src/template/: mod.rs
src/tui/: mod.rs
src/validate/: mod.rs
