[package]
name = "binparse-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.24"
crossterm = { version = "0.27", features = ["event-stream"] }
crc = "3.0"
adler = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
colored = "2.0"
evalexpr = "11.0"
csv = "1.3"
hex = "0.4"
atty = "0.2"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
